crates/rymx/tests/snapshots/full__main@mini__fizzbuzz.rym.snap
---
source: crates/rymx/tests/full.rs
expression: diag.outputs_dump() + &diag.reports_dump()
input_file: crates/rymx/tests/mini/fizzbuzz.rym
---
--- tokenize ---
Const [const]
HSpace [ ]
Ident [main]
HSpace [ ]
Assign [=]
HSpace [ ]
Ident [fn]
ParenOpen [(]
ParenClose [)]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t]
ParenOpen [(]
Int [1]
DotDot [..]
ParenClose [)]
Dot [.]
Ident [iter]
ParenOpen [(]
ParenClose [)]
Dot [.]
Ident [for_each]
ParenOpen [(]
Pipe [|]
Ident [i]
Pipe [|]
HSpace [ ]
Ident [println]
ParenOpen [(]
Ident [match]
HSpace [ ]
Ident [i]
HSpace [ ]
BraceOpen [{]
VSpace [\n]
HSpace [\t\t]
Ident [_]
HSpace [ ]
Ident [if]
HSpace [ ]
Ident [i]
HSpace [ ]
Percent [%]
HSpace [ ]
Int [3]
HSpace [ ]
Eq [==]
HSpace [ ]
Int [0]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
String [\"Fizz\"]
Comma [,]
VSpace [\n]
HSpace [\t\t]
Ident [_]
HSpace [ ]
Ident [if]
HSpace [ ]
Ident [i]
HSpace [ ]
Percent [%]
HSpace [ ]
Int [5]
HSpace [ ]
Eq [==]
HSpace [ ]
Int [0]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
String [\"Buzz\"]
Comma [,]
VSpace [\n]
HSpace [\t\t]
Ident [_]
HSpace [ ]
Ident [if]
HSpace [ ]
Ident [i]
HSpace [ ]
Percent [%]
HSpace [ ]
Int [15]
HSpace [ ]
Eq [==]
HSpace [ ]
Int [0]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
String [\"FizzBuzz\"]
Comma [,]
VSpace [\n]
HSpace [\t\t]
Ident [_]
HSpace [ ]
Assign [=]
GreaterThan [>]
HSpace [ ]
Ident [i]
Dot [.]
Ident [to_string]
ParenOpen [(]
ParenClose [)]
Comma [,]
VSpace [\n]
HSpace [\t]
BraceClose [}]
ParenClose [)]
ParenClose [)]
Semi [;]
VSpace [\n]
BraceClose [}]
Semi [;]
VSpace [\n]

--- parse ---

--- reports ---
Error: 
   ╭─[/home/simon/dev/rym/crates/rymx/tests/mini/fizzbuzz.rym:1:16]
   │
 1 │ const main = fn() => {
   │                ┬  
   │                ╰── ExpectedFound { expected: [], found: Some(ParenOpen) }
───╯

